# solana-stablecoin-standard

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  package.json  tsconfig.json
cli/: package.json
cli/src/: index.ts  utils.ts
cli/tests/: utils.test.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  ORACLE.md  RESEARCH.md  SDK.md  SPECIFICATION.md  SSS-1.md  SSS-2.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
programs/sss-oracle/: Cargo.toml  Xargo.toml
programs/sss-oracle/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  validation.rs
programs/sss-oracle/src/instructions/: cache_price.rs  close_feed.rs  initialize_feed.rs  mod.rs  set_manual_price.rs  update_feed_config.rs
programs/sss-token/: Cargo.toml
programs/sss-token/certora/: spec_access_control.rs  spec_pause_enforcement.rs  spec_supply_invariant.rs
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: accept_authority.rs  add_to_blacklist.rs  burn.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  propose_authority.rs  remove_from_blacklist.rs  seize.rs  thaw_account.rs  unpause.rs  update_minter.rs  update_roles.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: error.rs  lib.rs
scripts/: devnet-demo.ts  devnet-verify.ts
sdk/: package.json
sdk/src/: compliance.ts  index.ts  oracle.ts  pda.ts  presets.ts  stablecoin.ts  types.ts
sdk/tests/: oracle.test.ts  pda.test.ts  presets.test.ts  types.test.ts
services/: init.sql
services/__tests__/: auth.test.ts  config.test.ts  executor.test.ts  package-lock.json  package.json  parser.test.ts  (+3 more)
tests/: edge-cases.ts  invariants.ts  oracle.ts  sss-1.ts  sss-2.ts
trident-tests/: Trident.toml
tui/: Cargo.toml  README.md
tui/src/: accounts.rs  app.rs  config.rs  error.rs  event.rs  events.rs  instructions.rs  lib.rs  main.rs  pda.rs  pubsub.rs  rpc.rs  theme.rs  tui_backend.rs
tui/src/screens/: compliance.rs  dashboard.rs  events.rs  holders.rs  mod.rs  operations.rs  roles.rs
tui/src/widgets/: confirm.rs  help.rs  input_field.rs  mod.rs  quota_bar.rs  status_bar.rs  tab_bar.rs  toast.rs
tui/tests/: app_state.rs  borsh_roundtrip.rs  config_persist.rs  devnet_smoke.rs  error_parsing.rs  event_parse.rs  input_handling.rs  instruction_disc.rs  pda_crosscheck.rs  render_screens.rs  rpc_parsing.rs
(+120 files in other folders)
