[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard — main program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
spl-token-2022 = { version = "5", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.7"
spl-token-metadata-interface = "0.5"
solana-security-txt = "1.1.1"
