[package]
name = "transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard — transfer hook program for SSS-2 compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
spl-token-2022 = { version = "5", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.7"
sss-token = { path = "../sss-token", features = ["cpi"] }
